# gdpcviewer

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci-build-and-zip.yml
godot/: export_presets.cfg  gdpcviewer.gdextension  gdpcviewer.gdextension.uid  icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot
lib/: main.cpp
